--- a/templates/taiga/0/rancher-compose.yml
+++ b/templates/taiga/0/rancher-compose.yml
@@ -46,3 +46,8 @@
       required: true
       default: "no-reply@taiga.updiversity.io"
       type: "string"
+    - variable: extra_labels
+      description: "Additional Labels"
+      label: "Default additional labels"
+      required: false
+      type: string
