--- a/templates/taiga/1/docker-compose.yml
+++ b/templates/taiga/1/docker-compose.yml
@@ -45,5 +45,9 @@ taiga:
     - taiga_media:/usr/src/taiga-back/media
     - taiga-conf:/taiga
   labels:
+    {{- range $i, $elem := split ";" .Values.extra_labels }}
+    {{ $elem }}
+    {{- end }}
+
     # Make db only run on hosts that do not have a availability=temporal label
     io.rancher.scheduler.affinity:host_label: availability=permanent
